--- a/src/command/cli-rs-command-gen/Cargo.toml
+++ b/src/command/cli-rs-command-gen/Cargo.toml
@@ -3,7 +3,7 @@ name = "cli-rs-command-gen"
 version = "0.1.8"
 edition = "2021"
 description = "internal helper for cli-rs"
-license = "UNLICENSE"
+license = "Unlicense"
 
 [lib]
 proc-macro = true
